# simple-synthesizer

./: LICENSE  readme.md  simple-synthesizer-debug.apk
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/id/yuana/simple/synthesizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Oscillator.cpp  Oscillator.h  native-lib.cpp
app/src/main/java/id/yuana/simple/synthesizer/ui/: MainActivity.kt
app/src/main/java/id/yuana/simple/synthesizer/util/: Extensions.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/id/yuana/simple/synthesizer/: ExampleUnitTest.kt
